# gameboy-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
blargg-test-roms/: CMakeLists.txt  blargg_tests.cppm  cpu_instructions.test.cpp  halt_bug.test.cpp  instructions_timing.test.cpp  interrupt_time.test.cpp  memory_timing.test.cpp  memory_timing_2.test.cpp
blargg-test-roms/cpu-instructions/: CMakeLists.txt  cpu_instructions.test.cpp
cmake/: generate-ifc-dt-files.cmake  std-module-linker.cmake
dmg-acid2-test-rom/: CMakeLists.txt  dmg_acid2.test.cpp
gameboy-cpp/audio/: CMakeLists.txt  audio.cppm  audio_apu.cppm  audio_channels.cppm  audio_common.cppm  audio_memory.cppm  audio_processing.cppm
gameboy-cpp/cartridge/: CMakeLists.txt  cartridge.cppm  cartridge_common.cppm  cartridge_header.cppm  cartridge_parser.cppm  cartridge_rom.cppm
gameboy-cpp/cpu/: CMakeLists.txt  common.cppm  cpu.cppm  cycle.cppm  cycle.test.cpp  halt_context.cppm  ime.cppm  instructions.cppm  instructions.test.cpp  memory.cppm  memory_bus.cppm  program_counter.cppm  registers.cppm  registers.test.cpp  stack_pointer.cppm  temp_cache.cppm
gameboy-cpp/emulator/: CMakeLists.txt  cpu_runner.cppm  emulator.cpp  emulator.cppm  emulator_adapters.cppm  emulator_common.cppm  emulator_core.cppm  emulator_cpu.cppm  emulator_engine.cppm  emulator_factory.cppm  emulator_gameboy.cppm  emulator_joypad.cppm  emulator_joypad_qt.cpp  emulator_joypad_qt.cppm  emulator_joypad_qt.hpp  emulator_joypad_sdl.cppm  emulator_main.cpp  emulator_memory.cppm  emulator_scheduler.cppm  emulator_tasks.cppm  emulator_ui.cppm  emulator_ui_qt.cpp  emulator_ui_qt.cppm  emulator_ui_qt.hpp  emulator_ui_qt.qml  emulator_ui_sdl.cppm  emulator_utils.cppm  lcd.cppm  main.cpp  memory_map.cppm
gameboy-cpp/graphics/: CMakeLists.txt  graphics.cppm  graphics_common.cppm  graphics_fifo.cppm  graphics_lcd.cppm  graphics_memory.cppm  graphics_oam.cppm  graphics_object_buffer.cppm  graphics_pixel_fetcher.cppm  graphics_ppu.cppm  graphics_registers.cppm  graphics_vram.cppm
gameboy-cpp/interrupts/: CMakeLists.txt  interrupts.cppm  interrupts_common.cppm  interrupts_dispatch.cppm  interrupts_dispatch.test.cpp  interrupts_enable.cppm  interrupts_enable.test.cpp  interrupts_processor.cppm  interrupts_request.cppm  interrupts_request.test.cpp  interrupts_service.cppm  interrupts_service.test.cpp  interrupts_tests.cppm
gameboy-cpp/joypad/: CMakeLists.txt  joypad.cppm  joypad_common.cppm  joypad_core.cppm  joypad_memory.cppm  joypad_system.cppm
gameboy-cpp/mbc/: CMakeLists.txt  mbc.cppm  mbc_common.cppm  mbc_mbc1.cppm  mbc_mbc3.cppm  mbc_only_rom.cppm  mbc_system.cppm
gameboy-cpp/memory/: CMakeLists.txt  memory.cppm  memory_bus.cppm  memory_common.cppm  memory_map.cppm
gameboy-cpp/opcodes/: CMakeLists.txt  instructions.cppm  instructions_arithmetic.cppm  instructions_arithmetic.test.cpp  instructions_bit.cppm  instructions_bit.test.cpp  instructions_carry.cppm  instructions_carry.test.cpp  instructions_common.cppm  instructions_decode.cppm  instructions_dispatcher.cppm  instructions_execute.cppm  instructions_fetch.cppm  instructions_interrupt.cppm  instructions_jump.cppm  instructions_jump.test.cpp  instructions_load.cppm  instructions_load.test.cpp  instructions_misc.cppm  instructions_misc.test.cpp  instructions_pipeline.cppm  instructions_stack.cppm  instructions_stack.test.cpp  instructions_subroutine.cppm  instructions_subroutine.test.cpp  instructions_table.cppm  instructions_table.test.cpp  instructions_tests.cppm
gameboy-cpp/profiling/: CMakeLists.txt  profiling.hpp  profiling_ctrack.hpp  profiling_none.hpp  profiling_tracy.hpp
gameboy-cpp/timer/: CMakeLists.txt  timer.cppm  timer_common.cppm  timer_div.cppm  timer_system.cppm  timer_system.test.cpp  timer_tac.cppm  timer_tima.cppm  timer_tma.cppm
gameboy-cpp/utilities/: CMakeLists.txt  arithmetic.cppm  arithmetic.test.cpp  assert.cppm  bits.cppm  clock.cppm  enum.cppm  fixed_capacity_vector.cppm  fixed_size_queue.cppm  fixed_size_queue.test.cpp  frequency.cppm  io.cppm  memory.cppm  memory.test.cpp  panic.cppm  utilities.cppm
mooneye-test-suite/: CMakeLists.txt  acceptance.test.cpp  emulator_only.test.cpp  mooneye_tests_core.cppm
